--- a/minified.html
+++ b/minified.html
@@ -1,1 +1,1 @@
-<input id="d"><input id="b"><input id="o"><input id="h"><script>e=['b','o','d','h'].map(n=>document.querySelector('#'+n));b=[2,8,10,16];e.map((f,i)=>f.onchange=_=>{v=parseInt(f.value,b[i]);e.map((f,i)=>f.value=v.toString(b[i]))})</script>
+<input id=d><input id=b><input id=o><input id=h><script>b=[2,8,10,16];e='bodh'.split('').map(n=>document.querySelector('#'+n));e.map((f,i)=>f.onchange=_=>{v=parseInt(f.value,b[i]);e.map((f,i)=>f.value=v.toString(b[i]))})</script>
