--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <script>
 const bases = [10, 2, 8, 16]
 const elements = document.querySelectorAll('input')
-elements.forEach((field, index) => field.onchange = _ => {
-  const value = parseInt(field.value, bases[index])
-  elements.forEach((field, index) => field.value = value.toString(bases[index]))
+elements.forEach((sourceField, sourceIndex) => sourceField.onchange = _ => {
+  elements.forEach((field, index) => field.value = parseInt(sourceField.value, bases[sourceIndex]).toString(bases[index]))
 })
 </script>
 <style>
